<resources>
    <string name="app_name">TugasDay3</string>
    <string name="pakaian_adat_di_sumatra">Pakaian Adat di Sumatra</string>
    <string name="pakaian_adat_nusantara">Pakaian Adat Nusantara</string>
    <string name="pakaian_adat_di_pulau_sumatra">Pakaian Adat di Pulau Sumatra</string>
    <string name="aceh">Aceh</string>
    <string name="sumatra_barat">Sumatra Barat</string>
    <string name="sumatra_utara">Sumatra Utara</string>
    <string name="sumatra_selatan">Sumatra Selatan</string>
    <string name="riau">Riau</string>
    <string name="kepulauan_riau">Kepulauan Riau</string>
    <string name="bangka_belitung">Bangka Belitung</string>
    <string name="jambi">Jambi</string>
    <string name="lampung">Lampung</string>
    <string name="pakaian_tradisional_nusantara">Pakaian Tradisional Nusantara</string>
    <string name="pulau_sumatra">Pulau Sumatra</string>
    <string name="pulau_jawa">Pulau Jawa</string>
    <string name="pulau_kalimantan">Pulau Kalimantan</string>
    <string name="pulau_sulawesi">Pulau Sulawesi</string>
    <string name="pulau_maluku">Pulau Maluku</string>
    <string name="pulau_papua">Pulau Papua</string>
    <string name="provinsi_aceh">Provinsi Aceh</string>
    <string name="pulau_sumatera">Pulau Sumatera</string>
    <string name="provinsi_sumatra_utara">Provinsi Sumatra Utara</string>
    <string name="provinsi_sumatra_barat">Provinsi Sumatra Barat</string>
    <string name="provinsi_riau">Provinsi Riau</string>
    <string name="provinsi_kalimantan_utara">Provinsi Kalimantan Utara</string>
    <string name="provinsi_jawa_barat">Provinsi Jawa Barat</string>
    <string name="provinsi_jawa_timur">Provinsi Jawa Timur</string>
    <string name="provinsi_jawa_tengah">Provinsi Jawa Tengah</string>
    <string name="provinsi_dki_jakarta">Provinsi DKI Jakarta</string>
    <string name="provinsi_di_yogyakarta">Provinsi DI Yogyakarta</string>
    <string name="kalimantan_utara">Kalimantan Utara</string>
    <string name="kalimantan_timur">Kalimantan Timur</string>
    <string name="kalimantan_selatan">Kalimantan Selatan</string>
    <string name="kalimantan_tengah">Kalimantan Tengah</string>
    <string name="kalimantan_barat">Kalimantan Barat</string>
    <string name="sumatra">Sumatra</string>
    <string name="jawa">Jawa</string>
    <string name="kalimantan">Kalimantan</string>
    <string name="ulee_balang">Ulee Balang</string>
    <string name="busana_pengantin_tradisional">Busana Pengantin Tradisional</string>
    <string name="suntiang">Suntiang</string>
    <string name="adat_batak_toba">Adat Batak Toba</string>
    <string name="adat_melayu_riau">Adat Melayu Riau</string>
    <string name="adat_mukomuko">Adat Mukomuko</string>
    <string name="basahan">Basahan</string>
    <string name="kebaya_sunda">Kebaya Sunda</string>
    <string name="mantenan">Mantenan</string>
    <string name="adat_betawi">Adat Betawi</string>
    <string name="paes_ageng">Paes Ageng</string>
    <string name="adat_tidung">Adat Tidung</string>
    <string name="takwo">Takwo</string>
    <string name="adat_banjar">Adat Banjar</string>
    <string name="dayak_kenyah">Dayak Kenyah</string>
    <string name="king_baba">King Baba</string>
    <string name="busana_pengantin_aceh_ulee_balang_adalah_pakaian_tradisional_yang_dipakai_oleh_pengantin_perempuan_dalam_upacara_pernikahan_adat_aceh_terdiri_dari_kebaya_berwarna_cerah_dengan_hiasan_sulaman_emas_ulee_balang_berwarna_merah_yang_dipakai_di_atas_kebaya_serta_selendang_atau_selimut_dari_kain_songket">Busana pengantin Aceh Ulee Balang adalah pakaian tradisional yang dipakai oleh pengantin perempuan dalam upacara pernikahan adat Aceh. Terdiri dari kebaya berwarna cerah dengan hiasan sulaman emas, Ulee Balang berwarna merah yang dipakai di atas kebaya, serta selendang atau selimut dari kain songket.</string>
    <string name="share">Share</string>
    <string name="adat_tidung_antakusuma">Adat Tidung Antakusuma</string>
</resources>