<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOutline"
    tools:context=".PulauSumatra">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sumatra"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btn1"
        android:layout_below="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant20"
        android:text="@string/provinsi_aceh" />


    <Button
        android:id="@+id/btn2"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/btn1"
        android:backgroundTint="@color/material_dynamic_neutral_variant20"
        android:text="@string/provinsi_sumatra_utara" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView6"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant20"
        android:text="@string/provinsi_sumatra_barat" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView7"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/btn3"
        android:backgroundTint="@color/material_dynamic_neutral_variant20"
        android:text="@string/provinsi_riau" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView8"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant20"
        android:text="Provinsi Bengkulu" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="118dp"
        android:layout_below="@+id/text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="41dp"
        app:srcCompat="@drawable/aceh" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="131dp"
        android:layout_height="118dp"
        android:layout_below="@id/text"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="43dp"
        android:layout_toEndOf="@id/imageView"
        app:srcCompat="@drawable/sumut1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="136dp"
        android:layout_height="126dp"
        android:layout_below="@id/btn1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/sumbar" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="135dp"
        android:layout_height="121dp"
        android:layout_below="@id/btn2"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/imageView6"
        app:srcCompat="@drawable/riauu" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="129dp"
        android:layout_height="121dp"
        android:layout_below="@id/btn4"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/bengkuluu" />


</RelativeLayout>
